2007-02-01  Neil Jagdish Patel  <njp@Fedora>

	* src/awn-task.c: Added mouse-hover effects
	* src/awn-title.c: (_position_window): Raise window by 5px.

2007-02-01  Neil Jagdish Patel  <njp@Fedora>

	* src/awn-task-manager.c:
	* src/awn-task.c: Added effect support.

2007-01-31  Neil Jagdish Patel  <njp@Fedora>

	Experimental support for GObject-based task icons, and initial support forsmart launchers and startup notification.

	* src/Makefile.am:
	* src/awn-task-manager.c: 
	* src/awn-task-manager.h:
	* src/awn-task.c:
	* src/awn-task.h:
	* src/awn-utils.h:
	* src/awn-win-manager.c:
	* src/main.c: added support for new window manager

2007-01-30  Neil Jagdish Patel  <njp@Fedora>

	* src/Makefile.am:
	* src/Makefile.in:
	* src/awn-app.c: Added support for getting icon directly from X
	* src/awn-x.c: wrapper for X calls (getting icon)
	* src/awn-x.h: 

2007-01-29  Neil Jagdish Patel  <njp@Fedora>

	* src/awn-app.c: (awn_app_new): removed gtk_drag_dest_set_track_motion() for gtk+ < 2.10

2007-01-29  Neil Jagdish Patel  <njp@Fedora>

	* src/awn-bar.c: (do_shape_combine_mask):made static
	* src/awn-title.c: (do_shape_combine_mask), (_update_input_shape):made static, added support for gtk+ < 2.10
	* src/awn-window.c: (do_shape_combine_mask):made static

2007-01-28 Neil J. Patel <njpatel@gmail.com>

	* avant-preferences/Makefile.am: Adjust EXTRA_DIST to include glade file
	* awn-bar.c: Support for gtk+ < 2.10
	* awn-window.c: Support got gtk+ < 2.10

2007-01-28 Neil J. Patel <njpatel@gmail.com>

	* avant-window-navigator: Initial Release - 0.0.1

2007-01-20 Neil J. Patel <njpatel@gmail.com>

	* avant-window-navigator: Initial Import